// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AiInsightCard stories snapshot > Playground story renders and matches snapshot 1`] = `
<div
  class="border rounded-ui p-4 border-border bg-background"
  data-testid="ai-insight-card"
>
  <div
    class="flex items-stretch gap-2"
  >
    <div
      class="shrink-0 pt-0.5"
    >
      <div
        aria-hidden="true"
        class="flex shrink-0 items-center justify-center rounded-ui bg-gray-100 text-black w-8 h-8 sm:w-10 sm:h-10"
      >
        <svg
          aria-hidden="true"
          class="size-5 shrink-0 w-4 h-4 sm:w-5 sm:h-5"
          fill="currentColor"
          style="color: black;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2l2.5 7.5L22 12l-7.5 2.5L12 22l-2.5-7.5L2 12l7.5-2.5L12 2z"
          />
        </svg>
      </div>
    </div>
    <div
      class="flex-1 min-w-0 overflow-visible space-y-1"
    >
      <div
        class="flex items-center gap-2 flex-wrap"
      >
        <h3
          class="text-sm leading-none text-left font-semibold text-neutral-900"
        >
          AI Review Summary
        </h3>
        <span
          class="inline-flex items-center justify-center text-xs font-medium px-2 py-1 shrink-0 rounded-ui bg-gray-100 text-gray-800"
          data-slot="badge"
        >
          Beta
        </span>
      </div>
      <p
        class="text-sm text-left mt-0 mb-0 leading-relaxed break-words [&:not(:first-child)]:mt-0 text-gray-600 sm:text-sm"
      >
        Customers love the comfort and fit of these shoes. Many mention they run true to size and are great for all-day wear. The style and quality receive consistent praise.
      </p>
      <div
        class="flex items-center gap-1.5 sm:text-xs text-gray-600"
      >
        <svg
          aria-hidden="true"
          class="size-4 text-rating shrink-0"
          viewBox="0 0 20 20"
        >
          <path
            d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
            fill="var(--color-rating)"
            stroke="var(--color-rating)"
            stroke-width="1"
          />
        </svg>
        <span
          class="font-semibold text-neutral-900"
        >
          4.5
        </span>
        <span>
          ·
        </span>
        <span>
          Based on 128 reviews
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AiInsightCard stories snapshot > ReviewSummary story renders and matches snapshot 1`] = `
<div
  class="border rounded-ui p-4 border-border bg-background"
  data-testid="ai-insight-card"
>
  <div
    class="flex items-stretch gap-2"
  >
    <div
      class="shrink-0 pt-0.5"
    >
      <div
        aria-hidden="true"
        class="flex shrink-0 items-center justify-center rounded-ui bg-gray-100 text-black w-8 h-8 sm:w-10 sm:h-10"
      >
        <svg
          aria-hidden="true"
          class="size-5 shrink-0 w-4 h-4 sm:w-5 sm:h-5"
          fill="currentColor"
          style="color: black;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2l2.5 7.5L22 12l-7.5 2.5L12 22l-2.5-7.5L2 12l7.5-2.5L12 2z"
          />
        </svg>
      </div>
    </div>
    <div
      class="flex-1 min-w-0 overflow-visible space-y-1"
    >
      <div
        class="flex items-center gap-2 flex-wrap"
      >
        <h3
          class="text-sm leading-none text-left font-semibold text-neutral-900"
        >
          AI Review Summary
        </h3>
        <span
          class="inline-flex items-center justify-center text-xs font-medium px-2 py-1 shrink-0 rounded-ui bg-gray-100 text-gray-800"
          data-slot="badge"
        >
          Beta
        </span>
      </div>
      <p
        class="text-sm text-left mt-0 mb-0 leading-relaxed break-words [&:not(:first-child)]:mt-0 text-gray-600 sm:text-sm"
      >
        Customers love the comfort and fit of these shoes. Many mention they run true to size and are great for all-day wear.
      </p>
      <div
        class="flex items-center gap-1.5 sm:text-xs text-gray-600"
      >
        <svg
          aria-hidden="true"
          class="size-4 text-rating shrink-0"
          viewBox="0 0 20 20"
        >
          <path
            d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
            fill="var(--color-rating)"
            stroke="var(--color-rating)"
            stroke-width="1"
          />
        </svg>
        <span
          class="font-semibold text-neutral-900"
        >
          4.5
        </span>
        <span>
          ·
        </span>
        <span>
          Based on 128 reviews
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AiInsightCard stories snapshot > ShoppingAssistant story renders and matches snapshot 1`] = `
<button
  aria-label="Shop with your Personal Assistant"
  class="group w-full text-left border rounded-ui p-3.5 cursor-pointer bg-neutral-900 border-neutral-800"
  data-testid="ai-insight-card"
  type="button"
>
  <div
    class="flex items-stretch gap-3"
  >
    <div
      class="shrink-0 flex items-center self-stretch"
    >
      <div
        aria-hidden="true"
        class="flex shrink-0 items-center justify-center rounded-ui bg-white/10 text-white w-9 h-9"
      >
        <svg
          aria-hidden="true"
          class="size-5 shrink-0 w-3.5 h-3.5 !text-white"
          fill="currentColor"
          style="color: white;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2l2.5 7.5L22 12l-7.5 2.5L12 22l-2.5-7.5L2 12l7.5-2.5L12 2z"
          />
        </svg>
      </div>
    </div>
    <div
      class="flex-1 min-w-0 overflow-visible space-y-0.5"
    >
      <div
        class="flex items-center gap-2 flex-wrap"
      >
        <h3
          class="text-sm leading-none text-left font-semibold text-white"
        >
          Shop with your Personal Assistant
        </h3>
      </div>
      <p
        class="text-left mt-0 mb-0 break-words [&:not(:first-child)]:mt-0 text-neutral-200 font-normal text-xs"
      >
        I can help you find the perfect piece for your space. Shop with me.
      </p>
    </div>
    <div
      class="shrink-0 flex items-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right w-5 h-4 transition-colors text-white"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.5"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
    </div>
  </div>
</button>
`;
